# temporal-self-hosted

./: .gitignore  LICENSE  Makefile  README.md  build.env  docker-compose.yml
.github/: funding.yml
applications/flyway/sql-migrations/: V10__temporal_1.9.sql  V11__temporal_1.10.sql  V12__temporal_1.11.sql  V13__temporal_1.12.sql  V14__visibility_1.0.sql  V15__visibility_1.1.sql  V16__visibility_1.2.sql  V17__visibility_1.3.sql  V18__visibility_1.4.sql  V19__visibility_1.5.sql  V1__temporal_1.0.sql  V20__visibility_1.6.sql  V21__temporal_1.13.sql  V22__temporal_1.14.sql  V2__temporal_1.1.sql  V3__temporal_1.2.sql  V4__temporal_1.3.sql  V5__temporal_1.4.sql  V6__temporal_1.5.sql  V7__temporal_1.6.sql  V8__temporal_1.7.sql  V9__temporal_1.8.sql
applications/otel-collector/: Dockerfile  generate-otel-config.sh  otel-template.yaml
applications/temporal-admin-tools/: admin-tools.Dockerfile  pg-migrate-db.sh
applications/temporal-server/: auto-setup.sh  config.yaml  server.Dockerfile
applications/worker/: Dockerfile  pyproject.toml
applications/worker/worker/: main.py  temporal_client.py
applications/worker/worker/config/: config.py  docker.yaml  local.yaml
docs/: configure-metrics.md  server-upgrade.md
docs/images/drawio/: temporal_service.drawio
tools/: requirements.txt
tools/migrations/: generate_migration.py
