[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["Ben Bemis <bbemis@alumni.purdue.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
temporalio = "^1.6.0"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
temporal-worker = 'worker.main:main'
